# movie_data_builder

./: .gitignore  README.md  clean_movie_database.yaml  generated_movie_data_raw_log.txt  main_orchestrator.py  migrate_data.py  pyproject.toml  story_agent.py
configs/: llm_providers_config.yaml  main_config.yaml
data_providers/: llm_clients.py  omdb_api.py  tmdb_api.py
enrichers/: analytical_enricher.py  character_enricher.py  constrained_plot_rel_enricher.py  movie_data_enricher.py  review_summarizer_enricher.py
models/: movie_models.py
output/: clean_movie_database.yaml  generated_movie_data_raw_log.txt
prompts/: movie_analytical_data_prompt.txt  movie_enrich_chars_relationships_prompt.txt  movie_initial_data_prompt.txt  plot_constrained_with_relations_prompt.txt  summarize_tmdb_reviews_prompt.txt
utils/: helpers.py  image_downloader.py
